Fix misaligned radio/checkbox

--- a/styles/framework/elements/_forms.scss
+++ b/styles/framework/elements/_forms.scss
@@ -106,6 +106,7 @@ textarea,
     position: absolute;
     
     + label {
+        align-items: center;
         display: flex;
         margin-bottom: 1rem;
         
@@ -113,10 +114,8 @@ textarea,
         &::before {
             box-shadow: inset 0 0 0 2px lightgrey;
             content: '';
-            display: inline-block;
             @include size(1.125rem);
-            margin-right: 0.5rem;
-            margin-top: 0.3125rem;
+            margin-right: 0.75rem;
             text-align: center;
             transition: all $speed ease;
         }
