--- a/styles/style.css
+++ b/styles/style.css
@@ -703,17 +703,16 @@ textarea,
   position: absolute; }
   [type="checkbox"] + label,
   [type="radio"] + label {
+    align-items: center;
     display: flex;
     margin-bottom: 1rem; }
     [type="checkbox"] + label::before,
     [type="radio"] + label::before {
       box-shadow: inset 0 0 0 2px lightgrey;
       content: '';
-      display: inline-block;
       height: 1.125rem;
       width: 1.125rem;
-      margin-right: 0.5rem;
-      margin-top: 0.3125rem;
+      margin-right: 0.75rem;
       text-align: center;
       transition: all 0.25s ease; }
 
